# gmusicapi-cpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  Doxyfile.in  LICENSE  README.md  appveyor.yml  doxygen.cmake
cmake/: FindPythonLibsNew.cmake
cmake/Hunter/: config.cmake
example/: CMakeLists.txt  Example.cpp
include/PythonHelper/: ClassBase.h  Initializer.h  ModuleBase.h  typeConverters.h  utility.h
include/gmusicapi/: Album.h  AlbumArt.h  Artist.h  ClientBase.h  Clients.h  GeneratedRange.h  Genre.h  Mobileclient.h  Module.h  Musicmanager.h  Playlist.h  RadioStation.h  RegisteredDevice.h  SearchResults.h  SharedPlaylistInfo.h  Song.h  SongQuality.h  Webclient.h  genDefs.h
scripts/: build-travis.sh  install-boost.bat  install-boost.sh  install-cmake.sh  install-gmusicapi.bat  install-gmusicapi.sh  install-pip3.sh  install-python.sh  travis.py  user-config.jam
src/: Album.h  AlbumArt.h  Artist.h  CMakeLists.txt  ClientBase.cpp  ClientBase.h  DictionaryValue.h  GMusicApi.cpp  GMusicApi.h  GMusicApiUser.cpp  GMusicApiUser.h  GeneratedRange.h  Genre.h  Mobileclient.cpp  Mobileclient.h  Module.cpp  Module.h  Playlist.h  RadioStation.h  RegisteredDevice.h  SearchResults.h  Song.h  SongQuality.h  Webclient.cpp  genDefs.h  typeConverters.h  utility.h
src/PythonHelper/: CMakeLists.txt  ClassBase.cpp  ClassBase.h  ClassMember.h  Initializer.cpp  ModuleBase.cpp  ModuleBase.h  typeConverters.h  utility.h
src/gmusicapi/: Album.h  AlbumArt.h  Artist.h  CMakeLists.txt  ClientBase.cpp  ClientBase.h  Clients.cpp  Clients.h  GeneratedRange.h  Genre.h  Mobileclient.cpp  Mobileclient.h  Module.cpp  Module.h  Musicmanager.cpp  Musicmanager.h  Playlist.h  RadioStation.h  RegisteredDevice.h  SearchResults.h  SharedPlaylistInfo.h  Song.h  Source.cpp  Webclient.cpp  Webclient.h  genDefs.h  gmusicapiPath.h.in  typeConverters.h.orig
test/: CMakeLists.txt  ClientsTest.cpp  MobileclientTest.cpp  MusicmanagerTest.cpp  TestFixture.cpp  TestFixture.h  TesterMain.cpp  WebclientTester.cpp  audiotestPath.h.in  testFiles.h.in  userCredentials.h.in
